<resources>
    <string name="app_name">Learn View</string>
    <string name="short_nav_catalog">导航目录</string>
    <string name="short_custom_view">自定义view</string>
    <string name="short_demo_practice">demo实践</string>
    <string name="short_grid_text_content">自定义田字格view</string>
    <string name="short_grid_text_title">田字格 GridTextView</string>
    <string name="short_welcome">欢迎</string>
    <string name="short_animate_text_title">动画文本 AnimateText</string>
    <string name="long_input_slogan">请输入标语</string>
    <string name="short_background_color">背景色</string>
    <string name="short_text_color">文字颜色</string>
    <string name="short_text_size">文字尺寸</string>
    <string name="short_flashing">闪烁</string>
    <string name="short_rolling">滚动</string>
    <string name="short_play">播放</string>
    <string name="short_exit">退出</string>
    <string name="short_reset">重置</string>
    <string name="median_lm_title">可滚动到中间的LayoutManager</string>
    <string name="android_icon">安卓图标</string>
    <string name="app_version_info">当前版本：%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>