<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/welcomeFragment"
        android:checkable="true"
        android:icon="@drawable/ic_app_logo"
        android:title="@string/short_welcome" />
    <item
        android:id="@+id/mi_custom_view"
        android:title="@string/short_custom_view">
        <menu>
            <item
                android:id="@+id/gridTextFragment"
                android:icon="@drawable/ic_grid"
                android:title="@string/short_grid_text_title"
                android:checkable="true" />
        </menu>
    </item>
    <item
        android:id="@+id/mi_demo_practice"
        android:title="@string/short_demo_practice">
        <menu>
            <item
                android:id="@+id/animateTextFragment"
                android:icon="@drawable/ic_android"
                android:title="@string/short_animate_text_title"
                android:checkable="true" />

            <item
                android:id="@+id/medianLMFragment"
                android:icon="@drawable/ic_android"
                android:title="@string/median_lm_title"
                android:checkable="true" />
        </menu>
    </item>
</menu>